修复底层盘子可以移动Bug，添加界面引导样式

--- a/css/style.less
+++ b/css/style.less
@@ -7,7 +7,17 @@ html,body{
   margin: 0;
 
 }
+.intro{
+  margin: 0 auto;
+  max-width: 20em;
+  .img{
+    text-align: center;
+    max-width: 100%;
+    padding: 1rem;
+  }
+}
 .btns-box{
+  display: none;
   position: absolute;
   right: 10px;
   top: 10px;
