--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,17 @@ body {
   height: 100%;
   margin: 0;
 }
+.intro {
+  margin: 0 auto;
+  max-width: 20em;
+}
+.intro .img {
+  text-align: center;
+  max-width: 100%;
+  padding: 1rem;
+}
 .btns-box {
+  display: none;
   position: absolute;
   right: 10px;
   top: 10px;
